# philips-hue-haskell

./: .doc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  hue.cabal  stack-8.10.7.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.4.7.yaml  stack.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
app/: Main.hs
src/: Hue.hs
src/Hue/: Auth.hs  Config.hs  Discover.hs  Endpoint.hs  Examples.hs  Group.hs  Internal.hs  Light.hs  Request.hs  Sensor.hs
src/Hue/Internal/: Auth.hs  Config.hs  Discover.hs  Endpoint.hs  Group.hs  Light.hs  Request.hs  Schedule.hs  Sensor.hs
