name:                hue
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/txsmith/hue#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Smith
maintainer:          tnsmith@live.nl
copyright:           2018 Thomas Smith
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:
    Control Philips Hue lights with Haskell.
    To get started, see the Hue module.

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:     Hue
                     , Hue.Light
                     , Hue.Group
                     , Hue.Config
                     , Hue.Auth
                     , Hue.Request
                     , Hue.Discover
                     , Hue.Internal
                     , Hue.Internal.Light
                     , Hue.Internal.Group
                     , Hue.Internal.Config
                     , Hue.Internal.Auth
                     , Hue.Internal.Request
                     , Hue.Internal.Discover
  other-modules:       Hue.Examples
  build-depends:       base >= 4.7 && < 5
                     , http-client >= 0.5 && < 0.6
                     , http-conduit >= 2.2 && < 3.0
                     , http-types >= 0.9 && < 1.0
                     , blaze-builder >= 0.4 && < 0.5
                     , hostname >= 1 && < 1.1
                     , aeson >= 1.1 && < 2.0
                     , bytestring >= 0.10 && < 0.11
                     , text >= 1.2 && < 1.3
                     , containers >= 0.5 && < 0.6
                     , unordered-containers >= 0.2 && < 0.3
                     , vector >= 0.12 && < 0.13
                     , monad-loops >= 0.4 && < 0.5
                     , mtl >= 2.2.1 && < 2.3
                     , transformers >= 0.5 && < 0.6
                     , path >= 0.5 && < 1.0
                     , path-io >= 1.2 && < 2.0
                     , network >= 2.6 && < 2.7
                     , network-uri >= 2.6 && < 2.7
                     , time >= 1.6 && < 2.0
                     , hexml >= 0.3 && < 0.4
                     , safe-exceptions >= 0.1 && < 0.2
                     , pretty-simple
                     , flow
  default-extensions:  ScopedTypeVariables
                     , OverloadedStrings
                     , RecordWildCards
                     , FlexibleInstances
                     , FlexibleContexts
                     , DataKinds
                     , KindSignatures
                     , LambdaCase
                     , GeneralizedNewtypeDeriving
                     , StandaloneDeriving

-- executable hue-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , hue
--   default-language:    Haskell2010
--   default-extensions:  ScopedTypeVariables
--                      , OverloadedStrings
--                      , RecordWildCards
--                      , FlexibleInstances
--                      , FlexibleContexts
--                      , DataKinds
--                      , KindSignatures
--                      , LambdaCase

test-suite hue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hue
