cabal-version:       2.4
name:                hue
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/txsmith/hue#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Thomas Smith, Grzegorz Dziadkiewicz
maintainer:          Grzegorz Dziadkiewicz <grzegorz@dziadkiewicz.com>
copyright:           2018 Thomas Smith
category:            Web
build-type:          Simple
extra-source-files:  README.md
description:
    Control Philips Hue lights with Haskell.
    To get started, see the Hue module.

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:     Hue
                     , Hue.Light
                     , Hue.Sensor
                     , Hue.Group
                     , Hue.Config
                     , Hue.Auth
                     , Hue.Request
                     , Hue.Discover
                     , Hue.Internal
                     , Hue.Internal.Light
                     , Hue.Internal.Sensor
                     , Hue.Internal.Group
                     , Hue.Internal.Config
                     , Hue.Internal.Auth
                     , Hue.Internal.Request
                     , Hue.Internal.Discover
  other-modules:       Hue.Examples
  build-depends:       base >= 4.12 && < 5
                      , http-client
                      , http-conduit
                      , http-types
                      , blaze-builder
                      , hostname
                      , aeson > 2
                      , bytestring
                      , text
                      , containers
                      , unordered-containers
                      , vector
                      , monad-loops
                      , mtl
                      , transformers
                      , path
                      , path-io
                      , network
                      , network-uri
                      , time
                      , hexml
                      , safe-exceptions >= 0.1 && < 0.2
                      , pretty-simple
                      , flow
  default-extensions:  ScopedTypeVariables
                     , OverloadedStrings
                     , RecordWildCards
                     , FlexibleInstances
                     , FlexibleContexts
                     , DataKinds
                     , KindSignatures
                     , LambdaCase
                     , GeneralizedNewtypeDeriving
                     , StandaloneDeriving

-- executable hue-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , hue
--   default-language:    Haskell2010
--   default-extensions:  ScopedTypeVariables
--                      , OverloadedStrings
--                      , RecordWildCards
--                      , FlexibleInstances
--                      , FlexibleContexts
--                      , DataKinds
--                      , KindSignatures
--                      , LambdaCase

test-suite hue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hue
